test #35 : BattleGameServiceTest 구현